<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#59004B8D"
    tools:context=".BarcodeScannerActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="#B04A4A4A"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Product_name_header"
            android:textColor="#E6E6E6" />

        <EditText
            android:id="@+id/editTextProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/product_name"
            android:textColor="@color/white" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="31dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textColor="#FFFFFF" />

        <NumberPicker
            android:id="@+id/quantityPicker"
            android:layout_width="match_parent"
            android:layout_height="138dp" />

        <ToggleButton
            android:id="@+id/toggleButton"
            android:layout_width="192dp"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="ToggleButton"
            android:textColorHighlight="#004B8D"
            android:textColorLink="#004b8d"
            android:textOff="Add Item"
            android:textOn="Remove Item"
            android:theme="@style/ToggleButton" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="33dp" />

        <TextView
            android:id="@+id/tvExpDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:gravity="center_horizontal"
            android:text="@string/selectExpDate"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Click on the Year in the Prompt to Change the Year!" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="58dp" />

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_button"
            android:text="SEND"
            android:textColor="#FFFFFF" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>